--- a/old/index.html
+++ b/old/index.html
@@ -85,7 +85,7 @@
             }
         </style>
     </head>
-    <body style="text-align: center" class="wp0" onload="makeinfobox()">
+    <body style="text-align: center" class="nowp" onload="makeinfobox()">
       <script>
         function makepaintbox(){
             var newbox = new box({
@@ -164,7 +164,7 @@
             }
 
          var currentWP = 0;
-        var wpCycle = true;
+        var wpCycle = false;
 
          setInterval(function () {
              if (wpCycle == true){
