--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
         iframe{
             border: none;
             display: inline-block;
-            position: relative;
-            left: calc(50% - 320px);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 320px;
+            max-height: 180px;
+            min-width: 320px;
+            min-height: 180px;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -78,11 +86,11 @@
         <p>I'm your average game developer and programmer! I wrote this website using HTML, CSS, and JS! I have no other words. You can access my old website by going to <a href="http://twistynado.com/old">http://twistynado.com/old</a></p>
     </div>
 
-    <div id="item">
+    <!--<div id="item">
         <h1 style="display: inline-block;">Latest YouTube Videos Playlist!&nbsp;</h1><img style="display: inline-block;" src="img/yt.png" width="32" height="32">
         <br>
-        <iframe src="https://www.youtube.com/embed/videoseries?list=UUJHTei-Jf9LV3HM60QAtCQA" seamless allowfullscreen width="640" height="360" style="margin-left: auto;"></iframe>
-    </div>
+        <iframe src="https://www.youtube.com/embed/videoseries?list=UUJHTei-Jf9LV3HM60QAtCQA" seamless allowfullscreen style="margin-left: auto;"></iframe>
+    </div>-->
 
     <div id="item">
         <h1 style="display: inline-block;">Socials!&nbsp;</h1><img style="display: inline-block;" src="img/spinningcd.gif" width="32" height="32">
