--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
             <h3>My HP ZBook 15 G3</h3>
             <li>CPU: Intel Core i7-6700HQ</li>
             <li>STORAGE: UNKNOWN 256GB NVME</li>
-            <li>RAM: 32GB RAM</li>
+            <li>RAM: 16GB RAM</li>
             <li>GPU: Intel HD graphics 530</li>
             <li>OS: Ubuntu Linux</li>
         </ul>
         <ul style="display: inline-block; margin-left: 16px;">
             <h3>My Lenovo 3000 N100</h3>
-            <li>CPU: Intel Centruino Duo</li>
+            <li>CPU: Intel Centrino Duo</li>
             <li>STORAGE: Fujitsu 256GB SATA HDD</li>
             <li>RAM: 3.5GB RAM (4GB but x86)</li>
             <li>GPU: UNKNOWN</li>
