--- a/gravitysandbox-mobile/index.html
+++ b/gravitysandbox-mobile/index.html
@@ -6,6 +6,6 @@
     <title>Windows Pawn</title>
 </head>
 <body>
-    <iframe src="http://gravitysandbox.neocities.org" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+    <iframe src="https://gravitysandbox.neocities.org" frameborder="0" style="width: 100%; height: 100%;"></iframe>
 </body>
 </html>
