--- a/gravitysandbox/index.html
+++ b/gravitysandbox/index.html
@@ -6,6 +6,6 @@
     <title>Windows Pawn</title>
 </head>
 <body>
-    <iframe src="https://twisty-nado.github.io/gravitysandbox" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+    <iframe src="https://twisty-nado.github.io/gravitysandbox" frameborder="0" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0;"></iframe>
 </body>
 </html>
