--- a/gravitysandbox-mobile/index.html
+++ b/gravitysandbox-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Windows Pawn</title>
+    <title>Gravity Sandbox</title>
 </head>
 <body>
     <iframe src="https://gravitysandbox.neocities.org" frameborder="0" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0;"></iframe>
