--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
         <p>I'm your average game developer and programmer! I wrote this website using HTML, CSS, and JS! I have no other words. You can access my old website by going to <a href="http://twistynado.com/old">http://twistynado.com/old</a></p>
     </div>
 
+    <div id="item">
+        <h1 style="display: inline-block;">Other Websites!&nbsp;</h1><img style="display: inline-block;" src="img/smile.gif" width="32" height="32">
+        <br>
+        <p>My other websites are accessible with these links:
+            <br>
+            <a href="https://twistynado.com/windowspawn">Windows Pawn</a>
+            <br>
+            <a href="https://twistynado.com/windowspawn-new">Windows Pawn (New)</a>
+            <br>
+            <a href="https://twistynado.com/gravitysandbox">Gravity Sandbox V2</a>
+            <br>
+            <a href="https://twistynado.com/gravitysandbox-mobile">Gravity Sandbox V1 (Mobile)</a>
+            <br>
+            <a href="https://twistynado.com/pino">Pino</a>
+        </p>
+    </div>
+
     <!--<div id="item">
         <h1 style="display: inline-block;">Latest YouTube Videos Playlist!&nbsp;</h1><img style="display: inline-block;" src="img/yt.png" width="32" height="32">
         <br>
