--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <div id="item">
         <h1 style="display: inline-block;">Hello and welcome to my site!&nbsp;</h1><img style="display: inline-block;" src="img/smile.gif" width="32" height="32">
-        <p>I'm your average game developer and programmer! I wrote this website using HTML, CSS, and JS! You can access my old website by going to <a href="http://twistynado.com/old">http://twistynado.com/old</a>. My favourite song is B.Y.O.B by System Of A Down. Spotify link:</p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0EYOdF5FCkgOJJla8DI2Md?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p>I'm your average game developer and programmer! I wrote this website using HTML, CSS, and JS! You can access my old website by going to <a href="http://twistynado.com/old">http://twistynado.com/old</a>. My favourite song is B.Y.O.B by System Of A Down. Spotify link:</p><br><iframe style="border-radius:12px; position: relative;" src="https://open.spotify.com/embed/track/0EYOdF5FCkgOJJla8DI2Md?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <div id="item">
