--- a/index.html
+++ b/index.html
@@ -1,208 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-US">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Twisty's Website</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-    <script
-			  src="https://code.jquery.com/jquery-3.7.1.js"
-			  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-			  crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
-
-    <style>
-
-        .noscroll{
-            overflow: hidden;
-        }
-
-        .hide{
-            display: none;
-        }
-
-        html{
-            background: linear-gradient(0deg, hsla(236, 100%, 8%, 1) 0%, hsla(211, 100%, 28%, 1) 100%);
-            background-attachment: fixed;
-            margin: 0;
-            padding: 16px;
-            left: 0;
-            top: 0;
-            width: calc(100% - 32px);
-            height: calc(100% - 32px);
-            color: white;
-            font-family: 'Poppins', sans-serif;
-            scrollbar-color: hsla(236, 100%, 8%, 1) hsla(211, 100%, 28%, 1);
-        }
-
-        #item{
-            border: outset 4px;
-            min-height: 256px;
-            padding-left: 16px;
-            margin-top: 16px;
-        }
-
-        button{
-            border: outset 2px;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        input{
-            border: outset 2px;
-            outline: none;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        a{
-            text-shadow: 0 0 8px white;
-            color: blue;
-        }
-
-        iframe{
-            border: none;
-            display: inline-block;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 320px;
-            max-height: 180px;
-            min-width: 320px;
-            min-height: 180px;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <title>ERROR 1046</title>
 </head>
-
 <body>
-    <div id="item">
-        <h1 style="display: inline-block;">Hello and welcome to my site!&nbsp;</h1><img style="display: inline-block;" src="img/smile.gif" width="32" height="32">
-        <p>I'm your average game developer and programmer! I wrote this website using HTML, CSS, and JS! You can access my old website by going to <a href="http://twistynado.com/old">http://twistynado.com/old</a>. My favourite song is B.Y.O.B by System Of A Down.</p>
-    </div>
-
-    <div id="item">
-        <h1 style="display: inline-block;">Other Websites!&nbsp;</h1><img style="display: inline-block;" src="img/smile.gif" width="32" height="32">
-        <br>
-        <p>My other websites are accessible with these links:
-            <br>
-            <a href="https://twistynado.com/windowspawn">Windows Pawn</a>
-            <br>
-            <a href="https://twistynado.com/windowspawn-new">Windows Pawn (New)</a>
-            <br>
-            <a href="https://twistynado.com/gravitysandbox">Gravity Sandbox V2</a>
-            <br>
-            <a href="https://twistynado.com/gravitysandbox-mobile">Gravity Sandbox V1 (Mobile)</a>
-            <br>
-            <a href="https://twistynado.com/pino">Pino</a>
-        </p>
-    </div>
-
-    <!--<div id="item">
-        <h1 style="display: inline-block;">Latest YouTube Videos Playlist!&nbsp;</h1><img style="display: inline-block;" src="img/yt.png" width="32" height="32">
-        <br>
-        <iframe src="https://www.youtube.com/embed/videoseries?list=UUJHTei-Jf9LV3HM60QAtCQA" seamless allowfullscreen style="margin-left: auto;"></iframe>
-    </div>-->
-
-    <div id="item">
-        <h1 style="display: inline-block;">Socials!&nbsp;</h1><img style="display: inline-block;" src="img/spinningcd.gif" width="32" height="32">
-        <br>
-        <div onclick="window.open('http://youtube.com/twistynado')" style="width: 176px; text-align: center; display: inline-block;"><img width="128" height="128" src="img/yt.png"><br><h3>YouTube Channel</h3></div>
-        <div onclick="window.open('http://discord.gg/ue3SY66jWs')" style="width: 176px; text-align: center; display: inline-block; margin-left: 16px;"><img width="128" height="128" src="img/discord.png"><br><h3>Discord</h3></div>
-        <div onclick="window.open('http://open.spotify.com/user/31kdsaisnabzluymjz2oz6wjxccu?si=848f33397c3542f5')" style="width: 176px; text-align: center; display: inline-block; margin-left: 16px;"><img width="128" height="128" src="img/spotify.png"><br><h3>Spotify</h3></div>
-        <div onclick="window.open('http://github.com/twisty-nado')" style="width: 176px; text-align: center; display: inline-block; margin-left: 16px;"><img width="128" height="128" src="img/git.png"><br><h3>GitHub</h3></div>
-        <div onclick="window.open('http://roblox.com/users/284625870/profile')" style="width: 176px; text-align: center; display: inline-block; margin-left: 16px;"><img width="128" height="128" src="img/rbx.png"><br><h3>ROBLOX</h3></div>
-    </div>
-
-    <div id="item">
-        <h1 style="display: inline-block;">My Devices!&nbsp;</h1><img style="display: inline-block;" src="img/monitor.gif" width="32" height="32">
-        <br>
-        <ul style="display: inline-block;">
-            <h3>My Main PC</h3>
-            <li>CPU: AMD Ryzen 5 5600X</li>
-            <li>STORAGE: CRUCIAL 1TB SATA SSD, UNKNOWN 1TB HDD</li>
-            <li>RAM: 32GB DDR4 RAM</li>
-            <li>GPU: GIGABYTE GeForce GTX 1660 SUPER</li>
-            <li>OS: Windows 10 x64</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My DELL Dimension 2350</h3>
-            <li>CPU: Intel Core Duo</li>
-            <li>STORAGE: some random 1TB HDD</li>
-            <li>RAM: 512MB DDR2 RAM</li>
-            <li>GPU: [N/A]</li>
-            <li>OS: Windows XP Home Edition</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My HP ProDesk 400 G3 MT</h3>
-            <li>CPU: UNKNOWN</li>
-            <li>STORAGE: another random 1TB HDD</li>
-            <li>RAM: 4GB DDR3 RAM</li>
-            <li>GPU: [N/A]</li>
-            <li>OS: Windows 7 x64 Home Premium</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My SAMSUNG Galaxy S8+</h3>
-            <li>CPU: Octa-core (4x2.3 GHz Mongoose M2 & 4x1.7 GHz Cortex-A53)</li>
-            <li>STORAGE: 64GB</li>
-            <li>RAM: 4GB RAM</li>
-            <li>GPU: Mali-G71 MP20</li>
-            <li>OS: OneUI 1.0 (Android 9)</li>
-            <li>CARRIER: THREE</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My Nokia Lumia 630</h3>
-            <li>CPU: Quad-core 1.2 GHz Cortex-A7</li>
-            <li>STORAGE: 8GB</li>
-            <li>RAM: 512MB RAM</li>
-            <li>GPU: Adreno 305</li>
-            <li>OS: Windows Phone 8.1 Update</li>
-            <li>CARRIER: O2</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My HP ZBook 15 G3</h3>
-            <li>CPU: Intel Core i7-6700HQ</li>
-            <li>STORAGE: UNKNOWN 256GB NVME</li>
-            <li>RAM: 16GB RAM</li>
-            <li>GPU: Intel HD graphics 530</li>
-            <li>OS: Ubuntu Linux</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My Lenovo 3000 N100</h3>
-            <li>CPU: Intel Centrino Duo</li>
-            <li>STORAGE: Fujitsu 256GB SATA HDD</li>
-            <li>RAM: 3.5GB RAM (4GB but x86)</li>
-            <li>GPU: UNKNOWN</li>
-            <li>OS: Windows XP Home Edition, Windows Vista Ultimate</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My Fujitsu UNKNOWN</h3>
-            <li>CPU: UNKNOWN</li>
-            <li>STORAGE: [N/A]</li>
-            <li>RAM: 512MB</li>
-            <li>GPU: UNKNOWN</li>
-            <li>OS: [N/A]</li>
-        </ul>
-        <ul style="display: inline-block; margin-left: 16px;">
-            <h3>My XBOX 360</h3>
-            <li>CPU: UNKNOWN</li>
-            <li>STORAGE: 1TB HDD</li>
-            <li>RAM: UNKNOWN</li>
-            <li>GPU: UNKNOWN</li>
-            <li>OS: XBOX 360</li>
-        </ul>
-    </div>
-
-    <div id="item">
-        <h1 style="display: inline-block;">Suggest Ideas!&nbsp;</h1><img style="display: inline-block;" src="img/smile.gif" width="32" height="32">
-        <br>
-        <p>You can E-Mail me ideas for YouTube videos and to adjust the website by clicking <a href="mailto:superdoge7550@gmail.com">here!</a></p>
-    </div>
+    RUN
 </body>
-
 </html>
