--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERROR 1046</title>
+    <title>404</title>
 </head>
 <body>
-    RUN
+    <h1>404</h1>
 </body>
 </html>
