--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Twisty Nado</title>
 </head>
 <body>
-    <video id="video" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0; object-fit: fill;" onclick="document.getElementById('video').play()">
+    <video id="video" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0; object-fit: fill;" onclick="document.getElementById('video').play(); document.getElementById('video').requestFullscreen();">
         <source src="file.mp4">
     </video>
 </body>
