--- a/Assets/edge.html
+++ b/Assets/edge.html
@@ -43,10 +43,10 @@
         .div{
             background-color: #2d2d2d;
             position: absolute;
-            left: 4px;
-            width: calc(100% - 8px);
-            height: calc(100% - 44px);
-            border-radius: 4px;
+            left: 2px;
+            width: calc(100% - 6px);
+            height: calc(100% - 46px);
+            border-radius: 6px;
         }
     </style>
 </head>
@@ -54,8 +54,25 @@
     <nav>
         <img src="edge-left.png" draggable="false">
         <input type="search" class="search">
-        <img src="edge-right.png" draggable="false" style="position: relative; top: 3px; left: 30px">
+        <img src="edge-right.png" id="img" draggable="false" style="position: relative; top: 3px; left: 30px">
     </nav>
-    <div class="div"><img src="nowifi.png" draggable="false" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) scale(125%); overflow: hidden;"></div>
+    <div class="div">
+        <iframe name="WBrowse" src="https://www.google.com/webhp?igu=1" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%); width: 100%; height: 100%; overflow: hidden; border: none; border-radius: 4px;"></iframe>
+
+        <script>
+            let input = document.querySelector("input");
+            let btn = document.getElementById("img");
+            let iframe = document.querySelector("iframe");
+
+            btn.onclick = function () {
+                if (input.value.startsWith("http://") || input.value.startsWith("https://") ){
+                    iframe.src = input.value
+                } else /*if (input.value.startsWith("www"))*/ {
+                    iframe.src = "https://" + input.value
+                }
+            };
+
+        </script>
+    </div>
 </body>
 </html>
